# julia

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
src/: export.rs  image.rs  interface.rs  lib.rs  main.rs  render.rs  shaders.rs
src/shaders/: julia.comp  julia.frag  julia.vert
