[package]
name = "julia"
version = "0.1.0"
authors = ["John Andrews <theunderdog09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gramit = { version = "^0.2", features = ["vulkano"] }
vulkano = "^0.16"
vulkano-shaders = "^0.16"
image = "^0.22"
structopt = "^0.3"
palette = { version = "^0.5", features = ["named", "named_from_str"] }
